Navbar rebuilt and working properly. sidebar image size increased and fixed positon to reduce being cut off. eddited menu button and search buttons.

--- a/nhie/app/assets/stylesheets/application.css.scss
+++ b/nhie/app/assets/stylesheets/application.css.scss
@@ -41,12 +41,12 @@ a {
   text-decoration: none !important;
 }
 .main-header {
-  background: #606060;
+  /*background: #606060;*/
   padding: 5px;
   text-align: center;
   color: white;
   position: fixed;
-  width: 100%;
+  /*width: 100%;*/
   height: 5%;
   left: 0;
   z-index:1040;
@@ -54,8 +54,8 @@ a {
 }
 .main-header a {
   position: absolute;
-  left: 35px;
-  top: -20%;
+  left: 10px;
+  top: -5%;
   color: white;
   font-size: 32px;
 }
@@ -72,9 +72,12 @@ a {
   width: 0;
   height: 100%;
   /*background: #a3a3a3;*/
+  background-size: 25%;
+  background-attachment: fixed;
   background-image: image-url("blurred_cups_strip.jpg");
   overflow-y: auto;
   transition: width 0.3s ease;
+  z-index: 1050;
 }
 .main-nav a {
   display: block;
@@ -114,12 +117,13 @@ a {
   display: none;
 }
 .glyphicon.glyphicon-tasks {
-  font-size: 20px;
+  font-size: 25px;
+  color: #444444;
 }
 
 /*navbar search*/
 .navbar-form {
-	margin-top: -2.3%;
+	/*margin-top: -2.3%;*/
 }
 #search-form {
   /*background-color: white;*/
@@ -129,28 +133,34 @@ a {
   border-radius: 0px;
   font-family: Lato-Bold;
   font-size: 1em; 
-  height: 30px;
+  /*height: 30px;*/
   padding-right: 0px;
 }
 input.btn.btn-default.thin.form-control{
     border-radius: 0px;
-    height: 30px;
-    border: 2px white solid;
+    height: 34px;
+    border: 2px #444444 solid;
     background: none;
-    color: #888888;
+    color: #ff3427;
+    font-family: Lato-Light;
+    text-transform: uppercase;
+    font-size: 1em;
 }
 input.btn.btn-default.thin.form-control:hover{
   transition: 0.3s ease;
     border-radius: 0px;
-    height: 30px;
+    height: 34px;
     border: 2px #ff3427 solid;
     background-color: #ff3427;
     color: white;
 }
+.navbar-header {
+  float: right;
+}
 /*navbar search*/
 
 .form-control {
-	height: 20px;
+	/*height: 20px;*/
 }
 .btn.btn-default.thin{
 	padding: 0px 12px;
@@ -175,7 +185,7 @@ input.btn.btn-default.thin.form-control:hover{
   display: block;
 }
 #main-nav:target + .page-wrap .main-header {
-  width: 85%;
+  /*width: 85%;*/
   left: 15%;
 }
 .fullscreen_bg {
